Name:                docutils
Version:             0.1
Synopsis:            Transformers and writers for docutils XML
Description:         Tools for working with documents written using
                     reStructuredText markup
License:             BSD3
License-file:        LICENSE
Author:              Brent Yorgey
Maintainer:          byorgey@gmail.com
Bug-reports:         http://github.com/diagrams/docutils/issues
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.10
Extra-source-files:  CHANGES
Tested-with:         GHC == 7.10.2
Source-repository head
  type:     git
  location: http://github.com/diagrams/docutils.git

Library
  Exposed-modules:     Text.Docutils.CmdLine,
                       Text.Docutils.Util,
                       Text.Docutils.Transformers.Haskell,
                       Text.Docutils.Writers.HTML

  Build-depends:       base >= 4.0 && < 4.10,
                       ghc-paths >= 0.1 && < 0.2,
                       ghc >= 7.10 && < 7.12,
                       bin-package-db,
                       containers >= 0.4 && < 0.6,
                       hxt >= 9.1.4 && < 9.4,
                       highlighting-kate >= 0.5 && < 0.7,
                       blaze-html >= 0.5 && < 0.9,
                       split >= 0.1 && < 0.3,
                       cmdargs >= 0.10 && < 0.11

  hs-source-dirs:      src

  default-language:    Haskell2010
