Name:                docutils
Version:             0.2
Synopsis:            Transformers and writers for docutils XML
Description:         Tools for working with documents written using
                     reStructuredText markup
License:             BSD3
License-file:        LICENSE
Author:              Brent Yorgey
Maintainer:          byorgey@gmail.com
Bug-reports:         http://github.com/diagrams/docutils/issues
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.10
Extra-source-files:  CHANGES
Tested-with:         GHC == 9.12.2
Source-repository head
  type:     git
  location: http://github.com/diagrams/docutils.git

Library
  Exposed-modules:     Text.Docutils.CmdLine,
                       Text.Docutils.Util,
                       Text.Docutils.Transformers.Haskell,
                       Text.Docutils.Writers.HTML

  Build-depends:       base >= 4.0 && < 4.23,
                       ghc-paths >= 0.1 && < 0.2,
                       ghc >= 8.2 && < 9.16,
                       ghc-boot,
                       containers >= 0.4 && < 0.9,
                       hxt >= 9.1.4 && < 9.4,
                       skylighting >= 0.14 && < 0.15,
                       blaze-html >= 0.5 && < 0.10,
                       split >= 0.1 && < 0.3,
                       text >= 2.1 && < 2.2,
                       cmdargs >= 0.10 && < 0.11

  hs-source-dirs:      src

  default-language:    Haskell2010
